# dj-watchfiles

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
src/dj_watchfiles/: __init__.py  watch.py
tests/: compat.py  filters.py  test_dj_watchfiles.py  test_django_watchfiles.py
